@@ -16,7 +16,7 @@ import java.io.IOException;
 public class FacebookAsyncApacheExample {
 
     private static final String NETWORK_NAME = "Facebook";
-    private static final String PROTECTED_RESOURCE_URL = "https://graph.facebook.com/v2.11/me";
+    private static final String PROTECTED_RESOURCE_URL = "https://graph.facebook.com/v3.2/me";
 
     private FacebookAsyncApacheExample() {
     }
