@@ -2,6 +2,7 @@
  * separate OAuth1.0a and OAuth2.0 ServiceBuilders,
    introduce AuthorizationUrlBuilder (along with deprecation of AuthorizationUrlWithPKCE)
    add possibility to provide different scopes for each Access Token request
+ * upgrade Facebook API from v2.11 to v3.2
 
 [6.4.1]
  * support TLS 1.3 in JDK 11 for Salesforce
